# AI-Net

./: .gitignore  README.md
AIN-Agent/: pyproject.toml
AIN-Agent/shell-scripts/: gre-ipsec-vxlan-tunnels_v0.sh  gre-ipsec-vxlan_v1.txt  gre_tunnel.txt  installation.sh
AIN-Agent/shell-scripts/cap-files/gre/: gre_done.pcapng
AIN-Agent/shell-scripts/cap-files/gre-ipsec-vxlan/: vxlan_ipsec_gre.pcapng
AIN-Agent/shell-scripts/cap-files/ipsec/: ipsec-output.pcapng  ipsec-tunnel.pcapng  ipsec.pcapng
AIN-Agent/shell-scripts/cap-files/vxlan/: vxlan_done.pcapng
AIN-Agent/shell-scripts/project-temp-files/: ipsec-new-style  ipsec-new-style1
AIN-Agent/shell-scripts/project-temp-files/tmp-files/: abf-test  abf-tunnel-answer  answer  gre-ipsec  gre-ipsec-vxlan  gre-new-model  ipsec-done  ipsec-new-test-gre-helper  test-abf-answered  three-layered-test-done-different-sub  three-layered-test-done-vmtest  three-layered-test-new-mode-done-same-sub  trace-ouput-3layered-tun-vmtest
AIN-Agent/shell-scripts/shell-scripts/: my-build.sh
AIN-Agent/shell-scripts/shell-scripts/frr-installation/: frr_installation.sh  frr_installation_from_source.sh
AIN-Agent/shell-scripts/shell-scripts/gre/: gre_tunnel_in_vpp.sh
AIN-Agent/shell-scripts/shell-scripts/gre-ipsec-vxlan/: gre-ipsec-vxlan-tunnels_v1.sh
AIN-Agent/shell-scripts/shell-scripts/how-to-save-vpp-config/: init.txt  startup.conf
AIN-Agent/shell-scripts/shell-scripts/ospf-wanted/: what-should-we-do.txt
AIN-Agent/shell-scripts/shell-scripts/vpp-frr-ospf/: daemons  ospf.sh  ospf.txt  ospfd.conf
AIN-Manage/: pyproject.toml
(+20 files in other folders)
