[tool.poetry]
name = "ain-agent"
version = "0.1.0"
description = "this is the ain sdwan agent"
authors = ["zerobits01 <zerobits0101@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
